2011-11-07  Daniel Bates  <dbates@rim.com>

        Add CredentialStorage.cpp to WebCore/CMakeLists.txt
        https://bugs.webkit.org/show_bug.cgi?id=71748

        Reviewed by Martin Robinson.

        Adds CredentialStorage.cpp to WebCore/CMakeLists.txt since its provides a
        base implementation of this feature.

        Also adds a stub implementation of CredentialStorage to the WinCE port.

        * CMakeLists.txt: Added source file CredentialStorage.cpp.
        * CMakeListsEfl.txt: Added source file CredentialStorageCurl.cpp when building
          with the Curl networking backend.
        * CMakeListsWinCE.txt: Added source file CredentialStorageWin.cpp.
        * platform/network/win/CredentialStorageWin.cpp: Added.
        (WebCore::Credential::getFromPersistentStorage): Stub implementation.

2011-11-07  Kentaro Hara  <haraken@chromium.org>

        Remove [CustomGetter] IDL for window.Image of V8
        https://bugs.webkit.org/show_bug.cgi?id=71739

        Reviewed by Adam Barth.

        Currently, window.Image uses a custom getter to get the template
        of 'HTMLImageElementConstructor'. However, this getter does not need to
        be custom and can use a default getter
        'DOMWindowInternal::DOMWindowConstructorGetter'.

        Tests: fast/js/custom-constructors.html
               fast/dom/image-object.html
               fast/dom/gc-image-element.html
               fast/dom/Window/custom-constructors.html

        * bindings/v8/custom/V8DOMWindowCustom.cpp: Removed a custom getter.
        * page/DOMWindow.idl: Removed [CustomGetter] IDL from window.Image of V8. Renamed 'HTMLImageElementConstructor' to 'HTMLImageElementConstructorConstructor' in order to make window.Image use the template of (not 'HTMLImageElement' but) 'HTMLImageElementConstructor'. Note that CodeGenerator*.pm strips /Constructor$/ from the IDL type.

2011-11-07  Chris Fleizach  <cfleizach@apple.com>
